simple-api-rest/src/main/resources/archetype-resources/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${artifactName}
spec:
  selector:
    app: ${artifactName}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
