simple-api-rest/src/main/resources/archetype-resources/k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${artifactName}
spec:
  to:
    kind: Service
    name: ${artifactName}
